# Analytic-Engine

./: AGENTS.md  IMPLEMENTATION_GUIDE.md  LICENSE  README.md  SPEC.md  pyproject.toml  requirements.txt
docs/: OPERATIONAL.md  function_llm_reasoning_plan.md
skills/business_analysis/: skill.md
skills/data_processing/: skill.md
src/analytic_engine/: __init__.py  agent.py  config.py  types.py
src/analytic_engine.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/analytic_engine/reasoning/: chain.py  orchestrator.py  reflector.py  tree.py
src/analytic_engine/sandbox/: __init__.py  executor.py  manager.py  packages.py  security.py
src/analytic_engine/semantic/: actions.py  adapters.py  transform.py
src/analytic_engine/visualization/: engine.py  templates.py
tests/: conftest.py  test_linhtinh.py
tests/test_reasoning/: __init__.py  test_chain.py
tests/test_sandbox/: __init__.py  test_executor.py
tests/test_semantic/: __init__.py  test_actions.py
tests/test_visualization/: test_engine.py
