[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "analytic-engine"
version = "0.1.0"
description = "AI-powered data analysis module for LLMs"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "Duong Luong Ngoc Tung", email = "duonglnt@example.com"}
]
keywords = ["ai", "data-analysis", "llm", "agent", "sandbox"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pandas>=1.5.0",
    "numpy>=1.23.0",
    "scipy>=1.9.0",
    "statsmodels>=0.13.0",
    "scikit-learn>=1.2.0",
    "matplotlib>=3.6.0",
    "plotly>=5.12.0",
    "seaborn>=0.12.0",
    "pydantic>=2.0.0",
    "google-generativeai>=0.3.0",
    "pytest>=9.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
llm = [
    "google-generativeai>=0.3.0",
]

[project.urls]
Homepage = "https://github.com/duonglnt/analytic-engine-agent"
Repository = "https://github.com/duonglnt/analytic-engine-agent"
Issues = "https://github.com/duonglnt/analytic-engine-agent/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"analytic_engine" = ["py.typed"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
